push upload ảnh hoạt động 4, buổi 5

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,6 @@ EMAIL_PORT=465
 EMAIL_USERNAME=vinh224603@student.nctu.edu.vn
 EMAIL_PASSWORD=jnwq xydh ebwp uvbi
 EMAIL_FROM_ADDRESS=no-reply@yourdomain.com
+CLOUDINARY_CLOUD_NAME=dwshycfil
+CLOUDINARY_API_KEY=813753396832632
+CLOUDINARY_API_SECRET=VOR2kJlGLV_51JfNpA_BUl8R8c4
